# eznashdb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.node  Procfile  README.md  conftest.py  docker-compose.yml  flakeheaven_baseline.txt  fly.toml  makefile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  serve_dev.sh  webpack.config.js
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/workflows/: backup-b2.yml  ci.yml  fly.yml
app/: abuse_config.py  abuse_prevention.py  admin.py  apps.py  async_utils.py  backups.py  brevo.py  constance_config.py  context_processors.py  emails.py  enums.py  fields.py  forms.py  middleware.py  mixins.py  models.py  rate_limiting.py  settings.py  urls.py  views.py
app/backups/: backup_replicator.py  core.py
app/management/commands/: backup_db.py  cleanup_google_places_usage_records.py  restore_db.py  seed_db.py  send_weekly_summary.py  setup_google_oauth.py  sync_brevo_contacts.py
app/migrations/: 0001_initial.py  0002_remove_cooldown_until_field.py  0003_alter_ratelimitviolation_user.py  0004_alter_ratelimitviolation_endpoint.py  0005_remove_auto_now_from_violation_timestamps.py  0006_ratelimitviolation_user_ids_ratelimitappeal.py  0007_remove_permanently_banned_field.py  0008_remove_appealed_by_field.py  0009_google_places_usage.py
app/templates/admin/: admin_dashboard.html  admin_tools.html  restore_db.html
app/tests/: test_abuse_prevention.py  test_auth_redirects.py  test_brevo.py  test_context_processors.py  test_place_search.py  test_rate_limiting.py  test_views.py
app/tests/async_utils/: test_run_in_background.py
app/tests/backups/: test_backup_replicator.py
app/tests/models/: test_db_smoketests.py
app/tests/views/: test_custom_500.py
assets/: index.js
assets/components/: AddressInput.js  AddressInputWithModal.js  AddressMap.js  AddressMap2.js  AddressSearch.js  AddressTypeAhead.js  AddressTypeAhead2.js  CitySelect.js  LimitedResultsModal.js  ShulMarkerClusterGroup.js  ShulMarkersLayer.js  ShulPopup.js  ShulsFoundCount.js  ShulsMap.js
assets/css/: map.css
assets/entryPoints/: base.js  createUpdateShul.js  main.js  shuls.js  shulsMap.js
assets/initializers/: bodyHeight.js  scrollShadows.js  shadowScroll.js  tomSelect.js  tooltips.js
assets/utils/: geolocation.js  math.js  text.js
docs/: BACKUP_REDUNDANCY.md
eznashdb/: admin.py  apps.py  choices.py  constants.py  enums.py  filters.py  filtersets.py  forms.py  geocoding.py  mixins.py  models.py  place_search.py  random.py  serializers.py  urls.py  views.py  widgets.py
eznashdb/data/: israel_cities.py
eznashdb/management/commands/: clear_rate_violations.py
eznashdb/migrations/: 0001_initial.py  0002_rename_editted_by_shul_updated_by_room_created_at_and_more.py  0003_data_migration_remove_shuls_with_null_in_new_fields.py  0004_alter_room_created_at_alter_room_created_by_and_more.py  0005_remove_region_country_remove_shul_city_delete_city_and_more.py  0006_remove_shul_enum_has_kaddish_alone_and_more.py  0007_alter_room_relative_size.py  0008_alter_room_see_hear_score.py  0009_remove_room_is_centered.py  0010_room_is_balcony.py  0011_remove_room_is_balcony_back_and_more.py  0012_alter_room_relative_size_alter_room_see_hear_score.py  0013_alter_room_is_wheelchair_accessible.py  0014_rename_is_same_floor_back_room_is_elevated_back_and_more.py  0015_alter_room_created_by_alter_shul_created_by.py  0016_alter_room_relative_size.py  0017_alter_room_is_wheelchair_accessible.py  0018_shul_address.py  0019_alter_shul_address.py  0020_shul_city.py  0021_shul_latitude_shul_longitude_shul_place_id.py  0022_shullink.py  0023_auto_20231209_2130.py  0024_alter_room_relative_size.py  0025_alter_room_relative_size.py  0026_alter_room_see_hear_score.py  0027_childcareprogram.py  0028_childcareprogram_duration.py  0029_alter_room_see_hear_score.py  0030_childcareprogram_name.py  0031_alter_childcareprogram_duration.py  0032_alter_childcareprogram_age_max_and_more.py  0033_rename_age_max_childcareprogram_max_age_and_more.py  0034_alter_childcareprogram_options.py  0035_remove_shul_has_childcare_shul_has_no_childcare.py  0036_alter_room_relative_size_alter_room_see_hear_score.py  0037_remove_room_is_wheelchair_accessible.py  0038_remove_shul_has_female_leadership.py  0039_remove_shul_can_say_kaddish.py  0040_delete_shullink.py  (+23 more)
eznashdb/templates/: maps_redirect.html
eznashdb/templates/eznashdb/: captcha_verify.html  childcare_program_form.html  (+8 more)
eznashdb/templatetags/: eznashdb_tags.py  svg.py
eznashdb/testing_utils/: model_creators.py
eznashdb/tests/: test_enums.py  test_geocoding.py  test_mixins.py  test_urls.py
feedback/: context_processors.py  forms.py  github_client.py  urls.py  views.py
feedback/tests/: test_views.py
scripts/: b2_retention.py  sync_to_b2.py
static/css/: base.css
static/js/: base.js
templates/: 404.html  429.html  500.html  base.html  base_full_height.html  centered_card_base.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  settings.html  signup.html  verification_sent.html
templates/email/: abuse_appeal.html  feedback_notification.html  rate_limit_appeal.html  weekly_summary.html
templates/flatpages/: about.html  default.html
templates/includes/: bs_screen_size_indicator.html  footer.html  global_error_handler.html  messages.html  messages_alerts.html  navbar.html  navbar_item.html
templates/socialaccount/: authentication_error.html  login_cancelled.html
users/: adapters.py  admin.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_sample_switch_flag.py  0003_alter_user_options_user_unique_user_email_ci.py  0004_user_brevo_synced_at.py
users/tests/: test_adapters.py  test_admin.py  test_auth_flows.py
worker-service/: Dockerfile  crontab  fly.toml
(+79 files in other folders)
