[tool.poetry]
name = "eznashdb"
version = "0.1.0"
description = "The Ezrat Nashim Database"
authors = ["Ari Abramowitz <ari.abramowitz1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.2"
django-cors-headers = "^3.11.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-testmon = "^1.2.2"
pytest-watch = "^4.2.0"
pytest-spec = "^3.2.0"
beautifulsoup4 = "^4.11.1"
black = "^23.3.0"
pytest-xdist = "^3.2.1"
isort = "^5.12.0"
pre-commit = "^3.3.2"
djlint = "^1.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
